feat(CustomizeColumnsTearsheet): keyboard fixes
1. Move drag and focus to the drag handle, rather than whole row.

2. Stop using role=listbox and role=option.  Those roles would be
   appropriate for a simple selectable list, but don't work well
   with the dragging.

3. Stop being repetitive (from screen reader's perspective) in the text
   for each row.  It's still a little bit repetitive though in that
   each row both a button and checkbox, each with a label.

4. Stop needlessly using dangerouslySetInnerHtml.

Fixes #2475, #7343.

But note that DnD by keyboard won't work until #19365 is fixed.

--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_draggableElement.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_draggableElement.scss
@@ -11,13 +11,24 @@
 @use '@carbon/styles/scss/motion' as *;
 @use './variables';
 
+// Drag handle.
 .#{variables.$block-class}__draggable-handleStyle {
-  display: flex;
-  align-items: center;
+  // Cancel out default button styling.
+  padding: 0;
+  border: none;
+  background: none;
+
+  cursor: grab;
   margin-inline-end: $spacing-03;
 }
 
+.#{variables.$block-class}__draggable-handleStyle:active,
+.#{variables.$block-class}__draggable-handleHolder--dragging {
+  cursor: grabbing;
+}
+
 .#{variables.$block-class}__draggable-handleStyle.disabled {
+  cursor: none;
   pointer-events: none;
 }
 
@@ -39,13 +50,13 @@
   inline-size: 100%;
 }
 
+// The draggable element itself.
 .#{variables.$block-class}__draggable-handleHolder {
   position: relative; // above underlay
   display: flex;
   background-color: $layer;
   block-size: $spacing-09;
   border-block-end: 1px solid $layer-active;
-  cursor: grab;
 }
 
 .#{variables.$block-class}__draggable-handleHolder:hover {
@@ -66,11 +77,6 @@
   background-color: $highlight;
   color: $text-primary;
   outline: none;
-}
-
-.#{variables.$block-class}__draggable-handleHolder:active,
-.#{variables.$block-class}__draggable-handleHolder--dragging {
-  cursor: grabbing;
 }
 
 .#{variables.$block-class}__draggable-handleHolder-selected:hover {
