feat: added optional read more or read less mode, and changed name

--- a/packages/ibm-products-web-components/.storybook/_container.scss
+++ b/packages/ibm-products-web-components/.storybook/_container.scss
@@ -60,6 +60,10 @@ body {
   padding: 0;
 }
 
+.sbdocs-preview {
+  background-color: theme.$background;
+}
+
 #main-content {
   position: relative;
   /* stylelint-disable-next-line carbon/layout-use */
