--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -1,3 +1,4 @@
+//cspell: disable
 //
 // Copyright IBM Corp. 2020, 2025
 //
@@ -5,7 +6,6 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-// @use 'sass:list';
 @use 'sass:map';
 
 // Other Carbon settings.
