--- a/examples/carbon-for-ibm-products/InterstitialScreenView/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/InterstitialScreenView/src/Example/_example.scss
@@ -1,3 +1,6 @@
-@use '@carbon/styles/scss/spacing' as *;
-
-/* example SCSS */
+.wrapper {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
