--- a/packages/ibm-products/src/components/SidePanel/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/SidePanel/_storybook-styles.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2020, 2022
+// Copyright IBM Corp. 2020, 2025
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -9,10 +9,6 @@
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/themes/scss/themes';
 @use '@carbon/styles/scss/type';
-// @use '@carbon/ibm-products-styles/scss/global/decorators/side-panel-decorator'
-//   as *;
-@use '../../../../ibm-products-styles/src/global/decorators/side-panel-decorator'
-  as *;
 
 $story-prefix: side-panel-stories__;
 
@@ -59,12 +55,28 @@ $story-prefix: side-panel-stories__;
   block-size: 100%;
 }
 
-.#{$story-prefix}story-content {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  block-size: 100vh;
+// .#{$story-prefix}story-content {
+//   position: relative;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   block-size: 100vh;
+// }
+
+.#{$story-prefix}content {
+  flex-grow: 1;
 }
 
-@include side-panel-decorator($story-prefix);
+.sbdocs .#{$story-prefix}container {
+  display: flex;
+  background-color: var(--cds-background, #ffffff);
+  block-size: 60vh;
+  box-shadow: 0 0 4px 1px var(--cds-layer-accent-01, #e0e0e0);
+  color: var(--cds-text-primary, #161616);
+}
+
+.sb-show-main.sb-main-fullscreen {
+  // sidepanel sets overflow hidden to body when open, which is right in context of irl application but in story page, as we are rendering many isolated sidepanel variants, we need to unset this for presentational purposes
+  /* stylelint-disable-next-line declaration-no-important */
+  overflow: unset !important;
+}
