--- a/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.scss
+++ b/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.scss
@@ -41,18 +41,19 @@ $block-class-action-set: #{$prefix}--action-set;
     inline-size: 100%;
     min-block-size: 6.25rem;
     text-align: start;
-    transition: background-color $duration-moderate-02 motion(standard);@media screen and (prefers-reduced-motion: reduce) {
-&::before {
-      position: absolute;
-      margin: 0 auto;
-      background-color: $border-subtle-01;
-      block-size: 1px;
-      content: '';
-      inline-size: calc(100% - (2 * #{$spacing-05}));
-      inset-block-start: 0;
-      transition: none;
-}
-}
+    transition: background-color $duration-moderate-02 motion(standard);
+    @media screen and (prefers-reduced-motion: reduce) {
+      &::before {
+        position: absolute;
+        margin: 0 auto;
+        background-color: $border-subtle-01;
+        block-size: 1px;
+        content: '';
+        inline-size: calc(100% - (2 * #{$spacing-05}));
+        inset-block-start: 0;
+        transition: none;
+      }
+    }
 
     &::before {
       position: absolute;
