--- a/examples/carbon-for-ibm-products/InterstitialScreenView/src/Example/InterstitialScreenView/_interstitial-screen-view.scss
+++ b/examples/carbon-for-ibm-products/InterstitialScreenView/src/Example/InterstitialScreenView/_interstitial-screen-view.scss
@@ -1,8 +1,10 @@
 //
-// Copyright IBM Corp. 2023, 2023
+// Copyright IBM Corp. 2024, 2024
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
 //
 
-@use './stepped-animated-media';
+.c4p--interstitial-screen-view {
+  block-size: 100%;
+}
