--- a/packages/ibm-products-web-components/src/components/notification-panel/story-styles.scss
+++ b/packages/ibm-products-web-components/src/components/notification-panel/story-styles.scss
@@ -8,9 +8,18 @@
 @use '@carbon/styles/scss/spacing' as *;
 $prefix: 'c4p';
 $carbon-prefix: 'cds';
-$story-prefix: 'side-panel-stories__';
+$story-prefix: 'notification-panel-stories__';
 $block-class: #{$prefix}--notifications-panel;
 
+.#{$story-prefix}__story-container {
+  position: fixed;
+  display: grid;
+  block-size: 100vh;
+  grid-template-rows: 3rem 1fr;
+  inline-size: 100vw;
+  inset-block-start: 0;
+  inset-inline-start: 0;
+}
 .#{$story-prefix}body-content {
   display: flex;
   flex-direction: column;
@@ -48,37 +57,26 @@ $block-class: #{$prefix}--notifications-panel;
   justify-content: center;
 }
 
-.#{$block-class}__bottom-actions {
-  position: sticky;
-  z-index: 2;
+.#{$block-class}__view-all-button {
   display: flex;
   align-items: center;
-  background-color: $layer-01;
   block-size: 2.5rem;
-  border-block-start: 1px solid $border-subtle-01;
-  inset-block-end: 0;
+  border-inline-end: 1px solid $border-subtle-01;
+  color: $text-primary;
+  inline-size: 100%;
+  max-inline-size: calc(100% - 2.5rem);
   min-block-size: 2.5rem;
-  .#{$block-class}__view-all-button {
-    display: flex;
-    align-items: center;
-    block-size: 2.5rem;
-    border-inline-end: 1px solid $border-subtle-01;
-    color: $text-primary;
-    inline-size: 100%;
-    max-inline-size: calc(100% - 2.5rem);
-    min-block-size: 2.5rem;
-  }
-  .#{$block-class}__settings-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    block-size: 2.5rem;
-    color: $text-primary;
-    min-block-size: 2.5rem;
-    min-inline-size: 2.5rem;
-  }
-  .#{$block-class}__settings-button .#{$carbon-prefix}--btn__icon {
-    margin: 0;
-  }
+}
+.#{$block-class}__settings-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  block-size: 2.5rem;
+  color: $text-primary;
+  min-block-size: 2.5rem;
+  min-inline-size: 2.5rem;
+}
+.#{$block-class}__settings-button .#{$carbon-prefix}--btn__icon {
+  margin: 0;
 }
