--- a/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
+++ b/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
@@ -5,6 +5,9 @@
 * LICENSE file in the root directory of this source tree.
 */
 
+@use '@carbon/styles' with (
+  $font-path: '@ibm/plex'
+);
 @use '@carbon/styles/scss/spacing';
 @use '@carbon/styles/scss/colors';
 @use '@carbon/styles/scss/type';
@@ -18,16 +21,19 @@ $story-prefix: 'overflow-handler-stories__';
 
 .parent {
   overflow: scroll;
+  margin-block-start: spacing.$spacing-04;
   max-inline-size: 100%;
   scrollbar-width: none;
 }
 
-#visible-tags {
+#visible-items {
+  display: flex;
   white-space: nowrap;
 }
 
 // todo - create annotation component
 .annotation {
+  /* stylelint-disable-next-line carbon/theme-use */
   border: 1px dashed colors.$purple-40;
   inline-size: 100%;
 }
@@ -38,10 +44,19 @@ $story-prefix: 'overflow-handler-stories__';
   display: inline-flex;
   padding: spacing.$spacing-02;
   background: tag.$tag-background-purple;
+  /* stylelint-disable-next-line carbon/theme-use */
   color: tag.$tag-color-purple;
   column-gap: spacing.$spacing-02;
 }
 
 .annotation__content {
   padding: spacing.$spacing-05;
+}
+
+[data-hidden]:not([data-fixed]) {
+  display: none;
+}
+
+.cds-tag:not(:defined) {
+  display: none;
 }
