--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -16,6 +16,7 @@
 @use '@carbon/styles/scss/type';
 @use '@carbon/styles/scss/breakpoint' as *;
 @use '@carbon/styles/scss/utilities';
+@use '@carbon/styles/scss/components/button/tokens' as *;
 
 // Standard imports.
 @use '../../global/styles/project-settings' as c4p-settings;
@@ -199,9 +200,13 @@ $clabs-prefix: 'clabs'; // TODO: remove when resizer available in labs
     inset-inline-end: 0;
   }
   &.#{$block-class}--left-placement {
-    .clabs--resizer {
+    .#{$clabs-prefix}--resizer {
       grid-column: 2;
       inset-inline-start: 0;
+
+      &::before {
+        inset-inline-start: 0;
+      }
     }
     &:not(.#{$block-class}--slide-in) {
       // enableSidepanelResizer FeatureFlag class
@@ -226,18 +231,37 @@ $clabs-prefix: 'clabs'; // TODO: remove when resizer available in labs
       0 4px 10px 2px $ai-drop-shadow;
   }
 
-  .clabs--resizer {
-    z-index: 10;
+  .#{$clabs-prefix}--resizer--vertical::before {
+    position: absolute;
+    z-index: -1;
+    background-color: transparent;
+    block-size: 100%;
+    content: '';
+    inline-size: $spacing-01;
+    inset-block-end: 0;
+    inset-inline-end: 0;
+    transition: background-color $duration-moderate-01
+      motion(standard, productive);
+  }
+
+  &:hover {
+    .#{$clabs-prefix}--resizer--vertical::before {
+      background-color: $button-secondary-hover;
+    }
+  }
+
+  .#{$clabs-prefix}--resizer {
     background-color: transparent;
     grid-row: span 4 / span 3;
     inset-inline-start: -$spacing-02;
 
-    &--vertical::before {
+    &--vertical::after {
       position: absolute;
+      z-index: 10;
       block-size: 100%;
       content: '';
-      inline-size: calc(100% + 1rem);
-      inset-inline-start: -$spacing-03;
+      inline-size: $spacing-03;
+      inset-inline-start: -$spacing-01;
     }
 
     &:hover,
