fix(notification panel): hover style issue fix

--- a/packages/ibm-products-web-components/src/components/notification-panel/story-styles.scss
+++ b/packages/ibm-products-web-components/src/components/notification-panel/story-styles.scss
@@ -128,3 +128,8 @@ $block-class: #{$prefix}--notifications-panel;
     }
   }
 }
+#{$prefix}-notification:hover + #{$prefix}-notification {
+  &::before {
+    background-color: transparent;
+  }
+}
