--- a/packages/ibm-products-web-components/src/components/notification-panel/notification.scss
+++ b/packages/ibm-products-web-components/src/components/notification-panel/notification.scss
@@ -26,31 +26,18 @@ $carbon-prefix: 'cds';
 $block-notification-class: #{$prefix}--notifications-panel__notification;
 
 :host(#{$prefix}-notification) {
-  .#{$block-notification-class}__notification {
-    position: relative;
-    display: flex;
-    align-items: flex-start;
-    padding: $spacing-05;
-    border: 0;
-    background-color: $layer-01;
-    cursor: pointer;
-    inline-size: 100%;
-    min-block-size: 6.25rem;
-    text-align: start;
-    transition: background-color $duration-moderate-02 motion(standard);
-    @media screen and (prefers-reduced-motion: reduce) {
-      &::before {
-        position: absolute;
-        margin: 0 auto;
-        background-color: $border-subtle-01;
-        block-size: 1px;
-        content: '';
-        inline-size: calc(100% - (2 * #{$spacing-05}));
-        inset-block-start: 0;
-        transition: none;
-      }
-    }
-
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  padding: $spacing-05;
+  border: 0;
+  background-color: $layer-01;
+  cursor: pointer;
+  inline-size: 100%;
+  min-block-size: 6.25rem;
+  text-align: start;
+  transition: background-color $duration-moderate-02 motion(standard);
+  @media screen and (prefers-reduced-motion: reduce) {
     &::before {
       position: absolute;
       margin: 0 auto;
@@ -59,59 +46,70 @@ $block-notification-class: #{$prefix}--notifications-panel__notification;
       content: '';
       inline-size: calc(100% - (2 * #{$spacing-05}));
       inset-block-start: 0;
-      transition: background-color $duration-moderate-02 motion(standard);
+      transition: none;
     }
+  }
 
-    &:hover::before {
-      background-color: transparent;
-    }
-    .#{$block-notification-class}__notification-status-icon {
-      margin-inline-end: $spacing-03;
-      min-inline-size: 1rem;
-      &.#{$block-notification-class}__notification-status-icon-error {
-        fill: $support-error;
-      }
-      &.#{$block-notification-class}__notification-status-icon-success {
-        fill: $support-success;
-      }
-      &.#{$block-notification-class}__notification-status-icon-warning {
-        fill: $support-warning;
-      }
-      &.#{$block-notification-class}__notification-status-icon-informational {
-        fill: $support-info;
-      }
-    }
-    .#{$block-notification-class}__notification-time-label {
-      margin-block-end: $spacing-03;
-    }
-    .#{$block-notification-class}__dismiss-single-button {
-      position: absolute;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0;
-      color: $text-primary;
-      inset-block-start: 0;
-      inset-inline-end: 0;
-      min-inline-size: 2rem;
-      opacity: 0;
-      /* stylelint-disable-next-line max-nesting-depth */
-      &:hover,
-      &:focus {
-        opacity: 1;
-      }
-      --cds-link-primary: --cds-text-primary;
-      --cds-link-primary-hover: --cds-text-primary;
-    }
-    .#{$block-notification-class}__notification-time-label,
-    .#{$block-notification-class}__notification-description {
-      @include type.type-style('label-01');
+  &::before {
+    position: absolute;
+    margin: 0 auto;
+    background-color: $border-subtle-01;
+    block-size: 1px;
+    content: '';
+    inline-size: calc(100% - (2 * #{$spacing-05}));
+    inset-block-start: 0;
+    transition: background-color $duration-moderate-02 motion(standard);
+  }
 
-      color: $text-secondary;
+  &:hover::before {
+    background-color: transparent;
+  }
+  .#{$block-notification-class}__notification-status-icon {
+    margin-inline-end: $spacing-03;
+    min-inline-size: 1rem;
+    &.#{$block-notification-class}__notification-status-icon-error {
+      fill: $support-error;
     }
-    .#{$block-notification-class}__notification-description {
-      display: block;
+    &.#{$block-notification-class}__notification-status-icon-success {
+      fill: $support-success;
     }
+    &.#{$block-notification-class}__notification-status-icon-warning {
+      fill: $support-warning;
+    }
+    &.#{$block-notification-class}__notification-status-icon-informational {
+      fill: $support-info;
+    }
+  }
+  .#{$block-notification-class}__notification-time-label {
+    margin-block-end: $spacing-03;
+  }
+  .#{$block-notification-class}__dismiss-single-button {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    color: $text-primary;
+    inset-block-start: 0;
+    inset-inline-end: 0;
+    min-inline-size: 2rem;
+    opacity: 0;
+    /* stylelint-disable-next-line max-nesting-depth */
+    &:hover,
+    &:focus {
+      opacity: 1;
+    }
+    --cds-link-primary: --cds-text-primary;
+    --cds-link-primary-hover: --cds-text-primary;
+  }
+  .#{$block-notification-class}__notification-time-label,
+  .#{$block-notification-class}__notification-description {
+    @include type.type-style('label-01');
+
+    color: $text-secondary;
+  }
+  .#{$block-notification-class}__notification-description {
+    display: block;
   }
 }
 ::slotted(.#{$block-notification-class}__notification-title) {
@@ -127,17 +125,18 @@ $block-notification-class: #{$prefix}--notifications-panel__notification;
   @include font-weight('regular');
 }
 
-:host(.first-notification) .#{$block-notification-class}__notification::before {
+:host(.first-notification)::before {
   content: none;
 }
 
 :host(:hover),
 :host(:focus) {
-  .#{$block-notification-class}__notification {
-    background-color: $layer-accent-01;
-  }
-  .#{$block-notification-class}__notification
-    .#{$block-notification-class}__dismiss-single-button {
+  background-color: $layer-accent-01;
+  .#{$block-notification-class}__dismiss-single-button {
     opacity: 1;
+  }
+
+  &::before {
+    background-color: transparent;
   }
 }
