fix: support fixed and height

--- a/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
+++ b/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
@@ -22,13 +22,18 @@ $story-prefix: 'overflow-handler-stories__';
 .parent {
   overflow: scroll;
   margin-block-start: spacing.$spacing-04;
-  max-inline-size: 100%;
+  max-inline-size: 1000px;
   scrollbar-width: none;
 }
 
-#visible-items {
+.items {
   display: flex;
   white-space: nowrap;
+
+  &--vertical {
+    flex-direction: column;
+    block-size: calc(100% - spacing.$spacing-06);
+  }
 }
 
 // todo - create annotation component
@@ -51,6 +56,7 @@ $story-prefix: 'overflow-handler-stories__';
 
 .annotation__content {
   padding: spacing.$spacing-05;
+  block-size: calc(100% - spacing.$spacing-06);
 }
 
 [data-hidden]:not([data-fixed]) {
